--- a/requirements.txt
+++ b/requirements.txt
@@ -7,20 +7,25 @@ ffmpeg-python
 gitpython
 hachoir
 heroku3
-motor
-pillow
+motor==3.3.2
+pillow==10.1.0
 psutil
-py-tgcalls
+py-tgcalls==0.9.7
 pykeyboard
 pyrogram==2.0.106
 python-dotenv
-pyyaml
+pyyaml==6.0.1
 requests
 speedtest-cli
 spotipy
 tgcrypto
+telegraph
 unidecode
 yt-dlp
+#git+https://github.com/joetats/youtube_search@master
+#git+https://github.com/alexmercerind/youtube-search-python@main
 youtube-search
 youtube-search-python
-telethon
+gtts
+git+https://github.com/AsmSafone/SafoneAPI
+lyricsgenius
